- fixed various items and got the initial round trip working for pure sockets